--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -166,7 +166,7 @@ Variance sample means:
       (\#eq:samplevar2chnext)
 \end{equation} 
 
-You can see that with this formula the variance of sample means, Formula \@ref(eq:eq:samplevar2chnext), is simply the variance of the individuals in the population divided by the sample size. Oddly, this short cut works and provides the variance of sample means. Notice that we don’t have to have the full population, create thousands of sample, or go through any of that calculation work. All we need to know is the standard deviation of the population and the sample size. In the context of the current example we can compute the variance of the sample means using this information. Recall the people's height in the population is $\sigma^2=157.5$ and our sample size is $n$ = 10.
+You can see that with this formula the variance of sample means, Formula \@ref(eq:samplevar2chnext), is simply the variance of the individuals in the population divided by the sample size. Oddly, this short cut works and provides the variance of sample means. Notice that we don’t have to have the full population, create thousands of sample, or go through any of that calculation work. All we need to know is the standard deviation of the population and the sample size. In the context of the current example we can compute the variance of the sample means using this information. Recall the people's height in the population is $\sigma^2=157.5$ and our sample size is $n$ = 10.
 
 $$
 \begin{aligned} 
@@ -241,17 +241,6 @@ We can see that averaging over many estimate of the variance of sample means pro
 
 #VAR
 
-\begin{equation} 
-\sigma_{\bar{x}}^2 = \frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{k}
-      (\#eq:samplevarchnext)
-\end{equation} 
-
-
-
-\begin{equation} 
-\sigma_{\bar{x}}^2 = \frac{\sigma^2}{n}
-      (\#eq:samplevar2chnext)
-\end{equation} 
 
 
 
@@ -264,12 +253,6 @@ s_{\bar{x}}^2 = \frac{s^2}{n}
 
 #SE
 
-
-
-\begin{equation} 
-\sigma_{\bar{x}} = \sqrt{\frac{\sigma^2}{n}} = \frac{\sigma}{{\sqrt{n}}}
-      (\#eq:samplese2chnext)
-\end{equation} 
 
 
 \begin{equation} 
