--- a/packages.bib
+++ b/packages.bib
@@ -20,6 +20,12 @@
   note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+@Manual{R-emoGG,
+  title = {emoGG: Use Emoji in ggplot2},
+  author = {David L Miller},
+  year = {2020},
+  note = {R package version 0.0.2},
+}
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
@@ -33,6 +39,13 @@
   year = {2020},
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2020},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=janitor},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
@@ -54,6 +67,13 @@
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
@@ -67,6 +87,13 @@
   year = {2020},
   note = {R package version 2.2},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2020},
+  note = {R package version 2.1.1},
+  url = {https://CRAN.R-project.org/package=skimr},
 }
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
